fix misalignment in diffs

--- a/github-code-wrap.user.css
+++ b/github-code-wrap.user.css
@@ -18,11 +18,6 @@
     display: block !important;
   }
   td.blob-code-inner {
-    display: table-cell !important;
-  }
-  /* this pseudo element with value " " causes a misalignment in wrapped lines, while
-     it seems to serve no obvious purpose, so let's remove this space. */
-  .blob-code-inner:before {
-    content: "" !important;
+    display: flex !important;
   }
 }
